# rust-task-manager

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: commands.rs  lib.rs  main.rs
tests/: cli.rs
