[package]
name = "rust-task-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
chrono      = "0.4"
clap        = { version = "4.0", features = ["derive"] }
anyhow      = "1.0"

[dev-dependencies]
assert_cmd  = "2.0"
